# Habit-Tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  components.json  config.toml  package-lock.json  package.json  vite.config.ts
scripts/: cleanup-background-services.sh  get_recurring_calendar_events.applescript  notify.applescript  setup-background-services.sh
src/: App.css  App.tsx  Dashboard.tsx  Navigation.tsx  api.rs  date-helpers.ts  lib.rs  main.rs  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/applescripts/: debug.applescript
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app_config.rs  lib.rs  main.rs  requests.rs
src-tauri/tests/: integration_tests.rs
src/api/: connect_db.rs  converters.ts  dtos.ts  habitTracker.ts
src/components/: Calendar.tsx  HabitSummaryInfo.tsx  HabitTrackerCalendar.tsx
src/components/ui/: Button.tsx  Calendar.tsx  Dialog.tsx  Form.tsx
src/forms/: HabitForm.tsx  HabitFormDialog.tsx  HabitTrackerForm.tsx  HabitTrackerFormDialog.tsx  schemas.ts
src/layouts/: Main.tsx
src/lib/: utils.ts
src/models/: AppleCalendarEvent.ts  Habit.ts  HabitEntry.ts  HabitType.ts  index.ts
src/pages/: Dashboard.tsx  HabitForm.tsx  HabitTrackerForm.tsx
src/store/: appleCalendarEvent.ts  habit.ts  habitEntry.ts  index.ts
tests/: integration_tests.rs
