[package]
name = "habit_tracker"
version = "0.1.0"
description = "Habit Tracker"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "habit_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
specta = { version = "1.0.5", features = ["export"] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.16"
rusqlite = { version = "0.37.0", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "1.0.5", features = ["chrono", "export"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
