[package]
name = "habit_tracker"
version = "0.1.0"
description = "Habit Tracker"
authors = ["you"]
edition = "2021"
default-run = "habit_tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "habit_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.47.1", features = ["process"] }
chrono = { version = "0.4.42", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "1.0.5", features = ["chrono", "export"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
dirs = "5.0"

[[bin]]
name = "cleanup-data"
path = "src/bin/cleanup_data.rs"

[[bin]]
name = "habit-sync"
path = "src/bin/habit-sync.rs"

[features]
default = []
apple_calendar = []
